<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FragmentShowResults">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/level_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/level_results"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="40dp"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/percent_scored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/percentage_scored"
                android:textSize="30sp"
                android:layout_marginTop="40dp"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/message_alert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:layout_marginTop="40dp"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/attempts_left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:layout_marginTop="40dp"
                android:textAlignment="center" />

            <Button
                android:id="@+id/conditional_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/try_again"
                android:textAllCaps="false"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"/>

        </LinearLayout>
    </FrameLayout>
</layout>
